Update Font Awesome icons for version 6
Includes:

* Add `fa-brands` where we are using a brand icon
* Change `twitter` to `x-twitter`
* Change a few icons with `-o` to remove that suffix, since they have
removed that convention and the same icon now exists unprefixed.
* Change `facebook` to `facebook-f`, since that's what the old icon
was (the new `facebook` icon has the "f" mark in a circle).

I cross checked the v4 icons in https://fontawesome.com/v4/icons/ with
the v6 versions on the main site.

--- a/conference/templates/conference/intro.html
+++ b/conference/templates/conference/intro.html
@@ -20,7 +20,7 @@
         <div class="conference__title__location-date row">
           <h4 class="white margin-0 col-6" style="text-align:right">
             <span>
-              <span class="fa fa-calendar-o base-clr-txt" style="padding-right: 10px;"></span>
+              <span class="fa fa-calendar base-clr-txt" style="padding-right: 10px;"></span>
               {% if page.end_date %}
                 {{ page.date|date:'F' }} {{ page.date|date:'j' }}&ndash;{{ page.end_date|date:'j' }} {{ page.date|date:'Y' }}
               {% else %}
@@ -30,7 +30,7 @@
           </h4>
           <h4 class="white margin-0 col-6">
             <span>
-              <span class="fa fa-map-marker base-clr-txt" style="padding-right: 10px;"></span>
+              <span class="fa fa-location-dot base-clr-txt" style="padding-right: 10px;"></span>
               {{page.city}}, {{page.state}}
             </span>
           </h4>
