--- a/newamericadotorg/templates/components/post_share.html
+++ b/newamericadotorg/templates/components/post_share.html
@@ -1,13 +1,13 @@
 <div class="post-aside-wrapper post__social__wrapper">
   <div class="margin-bottom-lg-25">
     <a class="social--inline block" href="https://www.facebook.com/dialog/share?app_id=1650004735115559&display=popup&href=https://newamerica.org{{page.url}}" target="_blank" rel="noopener noreferrer" >
-      <i class="fa circle fa-facebook"></i>
+      <i class="fa circle fa-brands fa-facebook-f"></i>
       <h6>Share</h6>
     </a>
   </div>
   <div class="margin-bottom-lg-25">
     <a class="social--inline block" href="https://twitter.com/intent/tweet/?url=https://newamerica.org{{page.url}}&text={{page.title}}&via=newamerica" target="_blank" rel="noopener noreferrer" >
-      <i class="fa circle fa-twitter"></i>
+      <i class="fa fa-brands circle fa-x-twitter"></i>
       <h6>Tweet</h6>
     </a>
   </div>
