Replace Campaign Monitor with Mailchimp
- Mailchimp tags are now synced to MailingListSegments
- Subscriptions create/update contacts on the Mailchimp list
- Job Title/Organization removed from subscription form as these are no longer collected

--- a/subscribe/templates/wagtailadmin/mailchimp_sync.html
+++ b/subscribe/templates/wagtailadmin/mailchimp_sync.html
@@ -1,9 +1,9 @@
 {% extends "wagtailadmin/base.html" %}
 
-{% block titletag %}Commands: Sync Campaign Monitor{% endblock %}
+{% block titletag %}Commands: Sync Mailchimp{% endblock %}
 
 {% block content %}
-    {% include "wagtailadmin/shared/header.html" with title="Sync Campaign Monitor" icon="mail" %}
+    {% include "wagtailadmin/shared/header.html" with title="Sync Mailchimp" icon="mail" %}
     <section class="nice-padding">
         <form action="" method="post">{% csrf_token %}
             <input type="submit" value="Sync Now" class="button" />
