--- a/newamericadotorg/templates/components/story_grid.html
+++ b/newamericadotorg/templates/components/story_grid.html
@@ -4,17 +4,17 @@
 <div class="container story-grid">
   <div class="row gutter-10">
     <div class="col-12">
-      {% include 'components/card_lg.html' with post=page.lead_1.specific %}
+      {% include 'components/card_lg.html' with post=lead_1 %}
     </div>
     <div class="col-md-6 col-lg-4 push-lg-8">
-      {% include 'components/card_md.html' with post=page.lead_2.specific %}
+      {% include 'components/card_md.html' with post=lead_2 %}
     </div>
     <div class="col-md-6 col-lg-4">
-          {% if page.lead_4 %}
-            {% include 'components/card_sm.html' with post=page.lead_3.specific %}
-            {% include 'components/card_sm.html' with post=page.lead_4.specific %}
+          {% if lead_4 %}
+            {% include 'components/card_sm.html' with post=lead_3 %}
+            {% include 'components/card_sm.html' with post=lead_4 %}
           {% else %}
-            {% include 'components/card_md.html' with post=page.lead_3.specific %}
+            {% include 'components/card_md.html' with post=lead_3 %}
           {% endif %}
           <span class="mobile-only">
             {% include 'components/card_highlights.html' with stories=featured_stories %}
