--- a/other_content/templates/other_content/full_page_embed.html
+++ b/other_content/templates/other_content/full_page_embed.html
@@ -9,5 +9,5 @@
 {% block footer %}{% endblock %}
 
 {% block content %}
-    <iframe src="{{ page.embed_url }}" width="100%" height="100%"></iframe>
+    <iframe src="{{ page.embed_url }}" style="width: 100vw; height: 100vh;"></iframe>
 {% endblock %}
