--- a/newamericadotorg/templates/components/footer.html
+++ b/newamericadotorg/templates/components/footer.html
@@ -1,66 +1,85 @@
 <footer class="footer desktop container--full-width">
-	<div class="container">
-		<div class="row">
-			<div class="col-6">
-				<h2 class="margin-top-0 margin-bottom-15">New America</h2>
-				<h6 class="margin-top-0 margin-bottom-25">740 15th Street NW, Suite 900<br/>Washington, DC 20005</h6>
-				<div class="footer__social">
-					<a href="https://www.instagram.com/newamericaorg/" target="_blank" rel="noopener noreferrer"><i class="fa fa-brands fa-instagram circle"></i></a>
-					<a href="https://www.linkedin.com/company/new-america-foundation" target="_blank" rel="noopener noreferrer"><i class="fa fa-brands fa-linkedin circle"></i></a>
-					<a href="https://twitter.com/NewAmerica" target="_blank" rel="noopener noreferrer"><i class="fa fa-brands fa-x-twitter circle"></i></a>
-					<a href="https://www.facebook.com/NewAmerica" target="_blank" rel="noopener noreferrer"><i class="fa fa-brands fa-facebook circle"></i></a>
-					<a href="https://youtube.com/@NewamericaOrgideas" target="_blank" rel="noopener noreferrer"><i class="fa fa-brands fa-youtube circle"></i></a>
-				</div>
-			</div>
-			<div class="col-6">
-				<div class="row">
-					<div class="col-4">
-						<h6 class="link margin-top-0 margin-bottom-25">
-							<a href="/programs"><u>Programs</u></a>
-						</h6>
-						<h6 class="link margin-top-0 margin-bottom-25">
-							<a href="/events"><u>Events</u></a>
-						</h6>
-						<h6 class="link margin-top-0 margin-bottom-25">
-							<a href="/publications"><u>Publications</u></a>
-						</h6>
-						<h6 class="link margin-top-0 margin-bottom-25">
-							<a href="/subscribe"><u>Subscribe</u></a>
-						</h6>
-						<h6 class="link margin-top-0 margin-bottom-0">
-							<a href="/creative-commons"><u>Creative Commons</u></a>
-						</h6>
-					</div>
-					<div class="col-4">
-						<h6 class="link margin-top-0 margin-bottom-25">
-							<a href="/our-story"><u>Mission</u></a>
-						</h6>
-						<h6 class="link margin-top-0 margin-bottom-25">
-							<a href="/our-people"><u>People</u></a>
-						</h6>
-						<h6 class="link margin-top-0 margin-bottom-25">
-							<a href="/our-funding"><u>Funding</u></a>
-						</h6>
-						<h6 class="link margin-top-0 margin-bottom-0">
-							<a href="/policies-and-procedures/"><u>Policies & Procedures</u></a>
-						</h6>
-					</div>
-					<div class="col-4">
-						<h6 class="block link margin-top-0 margin-bottom-25">
-							<a href="/contact"><u>Contact</u></a>
-						</h6>
-						<h6 class="link margin-top-0 margin-bottom-25">
-							<a href="/jobs"><u>Jobs & Fellowships</u></a>
-						</h6>
-						<h6 class="link margin-top-0 margin-bottom-25">
-							<a href="/press-room"><u>Press</u></a>
-						</h6>
-						<h6 class="link margin-top-0 margin-bottom-0">
-							<a href="/our-funding/donate"><u>Donate</u></a>
-						</h6>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
+                <h2 class="margin-top-0 margin-bottom-15">New America</h2>
+                <h6 class="margin-top-0 margin-bottom-25">740 15th Street NW, Suite 900<br />Washington, DC 20005</h6>
+                <div class="footer__social">
+                    <a href="https://www.instagram.com/newamericaorg/" target="_blank" rel="noopener noreferrer"
+                        ><i class="fa fa-brands fa-instagram circle"></i
+                    ></a>
+                    <a
+                        href="https://www.linkedin.com/company/new-america-foundation"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        ><i class="fa fa-brands fa-linkedin circle"></i
+                    ></a>
+                    <a href="https://twitter.com/NewAmerica" target="_blank" rel="noopener noreferrer"
+                        ><i class="fa fa-brands fa-x-twitter circle"></i
+                    ></a>
+                    <a href="https://www.facebook.com/NewAmerica" target="_blank" rel="noopener noreferrer"
+                        ><i class="fa fa-brands fa-facebook circle"></i
+                    ></a>
+                    <a href="https://youtube.com/@NewamericaOrgideas" target="_blank" rel="noopener noreferrer"
+                        ><i class="fa fa-brands fa-youtube circle"></i
+                    ></a>
+                    <a
+                        href="https://bsky.app/profile/did:plc:kwwyqxm26vc4lfgnqwjep5da"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        ><i class="fa fa-brands fa-bluesky circle"></i
+                    ></a>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="row">
+                    <div class="col-4">
+                        <h6 class="link margin-top-0 margin-bottom-25">
+                            <a href="/programs"><u>Programs</u></a>
+                        </h6>
+                        <h6 class="link margin-top-0 margin-bottom-25">
+                            <a href="/events"><u>Events</u></a>
+                        </h6>
+                        <h6 class="link margin-top-0 margin-bottom-25">
+                            <a href="/publications"><u>Publications</u></a>
+                        </h6>
+                        <h6 class="link margin-top-0 margin-bottom-25">
+                            <a href="/subscribe"><u>Subscribe</u></a>
+                        </h6>
+                        <h6 class="link margin-top-0 margin-bottom-0">
+                            <a href="/creative-commons"><u>Creative Commons</u></a>
+                        </h6>
+                    </div>
+                    <div class="col-4">
+                        <h6 class="link margin-top-0 margin-bottom-25">
+                            <a href="/our-story"><u>Mission</u></a>
+                        </h6>
+                        <h6 class="link margin-top-0 margin-bottom-25">
+                            <a href="/our-people"><u>People</u></a>
+                        </h6>
+                        <h6 class="link margin-top-0 margin-bottom-25">
+                            <a href="/our-funding"><u>Funding</u></a>
+                        </h6>
+                        <h6 class="link margin-top-0 margin-bottom-0">
+                            <a href="/policies-and-procedures/"><u>Policies & Procedures</u></a>
+                        </h6>
+                    </div>
+                    <div class="col-4">
+                        <h6 class="block link margin-top-0 margin-bottom-25">
+                            <a href="/contact"><u>Contact</u></a>
+                        </h6>
+                        <h6 class="link margin-top-0 margin-bottom-25">
+                            <a href="/jobs"><u>Jobs & Fellowships</u></a>
+                        </h6>
+                        <h6 class="link margin-top-0 margin-bottom-25">
+                            <a href="/press-room"><u>Press</u></a>
+                        </h6>
+                        <h6 class="link margin-top-0 margin-bottom-0">
+                            <a href="/our-funding/donate"><u>Donate</u></a>
+                        </h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
