--- a/other_content/templates/other_content/full_page_embed.html
+++ b/other_content/templates/other_content/full_page_embed.html
@@ -16,13 +16,11 @@
 {% endblock %}
 {% block content %}
     {% if page.include_header_footer %}
-    <div class="post-body-wrapper margin-35">
+    <div class="container margin-35">
         {% include 'components/post_heading_text.html' %}
-        <article class="post-body">
-    {% endif %}
-            <iframe src="{{ page.embed_url }}" style="width: 100vw; height: 100vh;"></iframe>
-    {% if page.include_header_footer %}
-        </article>
+        <iframe src="{{ page.embed_url }}" style="width: 100%; height: 100vh;"></iframe>
     </div>
+    {% else %}
+        <iframe src="{{ page.embed_url }}" style="width: 100vw; height: 100vh;"></iframe>
     {% endif %}
 {% endblock %}
