--- a/newamericadotorg/templates/components/footer.html
+++ b/newamericadotorg/templates/components/footer.html
@@ -1,10 +1,10 @@
 <footer class="footer desktop container--full-width">
     <div class="container">
         <div class="row">
-            <div class="col-6">
+            <div class="col-3">
                 <h2 class="margin-top-0 margin-bottom-15">New America</h2>
                 <h6 class="margin-top-0 margin-bottom-25">740 15th Street NW, Suite 900<br />Washington, DC 20005</h6>
-                <div class="footer__social">
+                <div class="footer__social margin-bottom-25">
                     <a href="https://www.instagram.com/newamericaorg/" target="_blank" rel="noopener noreferrer"
                         ><i class="fa fa-brands fa-instagram circle"></i
                     ></a>
@@ -30,6 +30,14 @@
                         ><i class="fa fa-brands fa-bluesky circle"></i
                     ></a>
                 </div>
+            </div>
+            <div class="col-3 charity-seals">
+                <a class="charity-img" href="https://app.candid.org/profile/7781756" target="_blank"> 
+                    <img src="https://widgets.guidestar.org/prod/v1/pdp/transparency-seal/7781756/svg" />
+                </a>
+                <a class="charity-img" href="https://www.charitynavigator.org/ein/522096845" target="_blank"> 
+                    <img src="http://localhost:8000/media/images/charity-nav.original.png" />
+                </a>
             </div>
             <div class="col-6">
                 <div class="row">
