image link update

--- a/newamericadotorg/templates/components/footer.html
+++ b/newamericadotorg/templates/components/footer.html
@@ -36,7 +36,7 @@
                     <img src="https://widgets.guidestar.org/prod/v1/pdp/transparency-seal/7781756/svg" />
                 </a>
                 <a class="charity-img" href="https://www.charitynavigator.org/ein/522096845" target="_blank"> 
-                    <img src="http://localhost:8000/media/images/charity-nav.original.png" />
+                    <img src="https://d1y8sb8igg2f8e.cloudfront.net/images/charity-nav.original.png" />
                 </a>
             </div>
             <div class="col-6">
