--- a/newamericadotorg/templates/components/footer_mobile.html
+++ b/newamericadotorg/templates/components/footer_mobile.html
@@ -2,7 +2,7 @@
 	<section class='footer__wrapper container--wide'>
 		<h2 class="centered margin-top-15 margin-bottom-15px">New America</h2>
 		<div class="footer__content">
-      <ul class="footer-mobile__content-list margin-bottom-0">
+      <ul class="footer-mobile__content-list">
         <li><a href="/our-story/"><h6 class="inline">Our Story</h6></a></li>
         <li><a href="/publications/"><h6 class="inline">Publications</h6></a></li>
         <li><a href="/programs/"><h6 class="inline">Programs</h6></a></li>
@@ -13,5 +13,13 @@
         <li><a href="/contact-us/"><h6 class="inline">Contact Us</h6></a></li>
       </ul>
 		</div>
+    <div class="charity-seals" style="margin-top: 25px;">
+      <a class="charity-img" href="https://app.candid.org/profile/7781756" target="_blank"> 
+          <img src="https://widgets.guidestar.org/prod/v1/pdp/transparency-seal/7781756/svg" />
+      </a>
+      <a class="charity-img" href="https://www.charitynavigator.org/ein/522096845" target="_blank"> 
+          <img src="https://d1y8sb8igg2f8e.cloudfront.net/images/charity-nav.original.png" />
+      </a>
+  </div>
 	</section>
 </footer>
