fsf25 save the date updates

--- a/newamericadotorg/assets/scss/components/header/_logo.scss
+++ b/newamericadotorg/assets/scss/components/header/_logo.scss
@@ -6,7 +6,7 @@
   // height: 24px;
   width: 120px;
   height: 40px;
-  @include transition(background-image 0.15s ease);
+  // @include transition(background-image 0.15s ease);
   &:after{
     //preload white logo
     content: '';
