--- a/future_security_forum/templates/save-date/landing.html
+++ b/future_security_forum/templates/save-date/landing.html
@@ -49,15 +49,17 @@
         {% else %}
           <h1 class="promo white centered margin-35">{{page.title}}</h1>
         {% endif %}
-        <h6 class="pullquote white centered">{{ page.subheading }}</h6>
-        <p class="white centered">{{page.search_description}}</p>
-        <div class="btns-container {%if page.invitation_only %}invite-only{% endif %}" style="text-align:center;">
-          {% if page.invitation_only %}
-            <a href="mailto:events@newamerica.org?Subject={{page.title}}" target="_top" class="button white-outline" style="width:175px;">Request Invitation</a>
-          {% elif page.rsvp_link %}
+        {% if page.subheading %}
+          <p class="pullquote white centered">{{ page.subheading }}</p>
+        {% endif %}
+
+        {% if page.rsvp_link %}
+          <div class="" style="text-align: center;">
             <a href="{{page.rsvp_link}}" target="_blank" rel="noopener noreferrer" class="button white-outline" style="width:175px;">Register</a>
-          {% endif %}
-        </div>
+          </div>
+        {% endif %}
+ 
+
       </div>
 
   </div>
