--- a/newamericadotorg/assets/scss/pages/conference/_intro.scss
+++ b/newamericadotorg/assets/scss/pages/conference/_intro.scss
@@ -1,42 +1,61 @@
-.conference__intro{
-  height: 100vh;
-  position: relative;
-  margin-top:#{-$header-height};
+.conference__intro {
+    height: 100vh;
+    position: relative;
+    margin-top: #{-$header-height};
 }
 
-.conference__title{
-  padding-top: $header-height;
-  max-width: 650px;
-  width: 100%;
-  margin: 0 auto;
-  position: absolute;
-  @include center;
-
-  .na-logo img{
-    max-width: calc(100vw - 30px);
-    display: block;
-    left: 50%;
-    @include transform(translateX(-50%));
+.conference__title {
+    padding-top: $header-height;
+    max-width: 650px;
+    width: 100%;
+    margin: 0 auto;
     position: absolute;
-    top: 0;
+    @include center;
 
-    @media (min-width: 430px){
-      max-width: 400px;
+    .na-logo img {
+        max-width: calc(100vw - 30px);
+        display: block;
+        left: 50%;
+        @include transform(translateX(-50%));
+        position: absolute;
+        top: 0;
+
+        @media (min-width: 430px) {
+            max-width: 400px;
+        }
     }
-  }
 }
 
 .conference__title__location-date {
-  text-align: center;
-  > h4 {
-    display: inline-block;
-    margin: 10px;
-  }
+    text-align: center;
+    > h4 {
+        display: inline-block;
+        margin: 10px;
+    }
 }
 
 .conference__title__image {
-  display: block;
-  max-width: 60%;
-  max-height: calc(100vh - 500px);
-  margin: 30px auto;
+    display: block;
+    max-width: 60%;
+    max-height: calc(100vh - 500px);
+    margin: 30px auto;
+}
+
+.fsf-2025-intro {
+    .pullquote {
+        font-family: $label-font-family;
+        font-size: 14px;
+        padding-left: 15px;
+        padding-right: 15px;
+        line-height: 1.3;
+
+        @media (min-width: 430px) {
+            font-size: 16px;
+            line-height: 1.5;
+        }
+
+        @media (min-width: 850px) {
+            font-size: 18px;
+        }
+    }
 }
