--- a/future_security_forum/templates/save-date/landing.html
+++ b/future_security_forum/templates/save-date/landing.html
@@ -55,7 +55,7 @@
 
         {% if page.rsvp_link %}
           <div class="" style="text-align: center;">
-            <a href="{{page.rsvp_link}}" target="_blank" rel="noopener noreferrer" class="button white-outline" style="width:175px;">Register</a>
+            <a href="{{page.rsvp_link}}" target="_blank" rel="noopener noreferrer" class="button white-outline" style="width:175px;">Learn More</a>
           </div>
         {% endif %}
  
