--- a/newamericadotorg/templates/base.html
+++ b/newamericadotorg/templates/base.html
@@ -52,6 +52,10 @@
     <meta name="twitter:site" content="@NewAmerica">
   {% endif %}
 
+  {% if page.archived_page %}
+  <meta name="robots" content="noindex, nofollow">
+  {% endif %}
+
   <% for (var css in htmlWebpackPlugin.files.css) { %>
     <link href="<%= htmlWebpackPlugin.files.css[css] %>" rel="stylesheet">
     <% } %>
