--- a/newamericadotorg/templates/base.html
+++ b/newamericadotorg/templates/base.html
@@ -44,7 +44,14 @@
   <meta property="og:description" content="{% firstof page.search_description page.story_excerpt %}" />
   <meta name="twitter:description" content="{% firstof page.search_description page.story_excerpt %}" />
 
-  {% if page.story_image %}
+
+  {% if page.social_sharing_image %}
+    {% image page.social_sharing_image fill-1200x630 as social %}
+    <meta property="og:image" content="{{ social.file.url }}" />
+    <meta name="twitter:image" content="{{ social.file.url }}" />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@NewAmerica">
+  {% elif page.story_image %}
     {% image page.story_image fill-1200x630 as og_image %}
     <meta property="og:image" content="{{ og_image.file.url }}" />
     <meta name="twitter:image" content="{{ og_image.file.url }}" />
