adding anchor links to resource packs and making titles h2

--- a/newamericadotorg/assets/scss/base/_type.scss
+++ b/newamericadotorg/assets/scss/base/_type.scss
@@ -34,7 +34,8 @@ p, blockquote, label, li, figcaption, a {
 }
 
 .h1, 
- h1 {
+ h1,
+ .resource-title {
   margin-top: 0.875rem;
   margin-bottom: 0.875rem;
 
