--- a/newamericadotorg/templates/blocks/resource_kit.html
+++ b/newamericadotorg/templates/blocks/resource_kit.html
@@ -4,4 +4,5 @@
   data-title='{{value.title}}'
   data-description='{{value.description}}'
   data-resources='{{resources}}'
-  data-type="resource"></div>
+  data-type="resource"
+  id="{{value.anchor}}"></div>
