--- a/newamericadotorg/templates/blocks/resource_kit.html
+++ b/newamericadotorg/templates/blocks/resource_kit.html
@@ -5,4 +5,7 @@
   data-description='{{value.description}}'
   data-resources='{{resources}}'
   data-type="resource"
-  id="{{value.anchor}}"></div>
+  {% if value.anchor %}
+  id="{{value.anchor}}"
+  {% endif %}
+></div>
